--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "commit": "npx prettier . --write && git add -A && git commit"
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
