--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "jhg-app",
     "version": "1.0.0",
     "main": "app.ts",
+    "type": "module",
     "scripts": {
         "start": "node ./app.ts",
         "test": "echo \"Error: no test specified\" && exit 1",
