--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "bootstrap": "^5.3.3",
+        "react": "^18.3.1",
+        "react-bootstrap": "^2.10.4",
+        "react-dom": "^18.3.1",
+        "react-scripts": "5.0.1",
+        "web-vitals": "^2.1.4",
+        "react-router-dom": "^6.25.1"
+    },
+    "devDependencies": {
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -12,16 +21,9 @@
         "@types/react": "^18.3.3",
         "@types/react-bootstrap": "^0.32.37",
         "@types/react-dom": "^18.3.0",
-        "bootstrap": "^5.3.3",
-        "prettier": "^3.3.3",
-        "react": "^18.3.1",
-        "react-bootstrap": "^2.10.4",
-        "react-dom": "^18.3.1",
-        "react-scripts": "5.0.1",
-        "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4",
         "@types/react-router-dom": "^5.3.3",
-        "react-router-dom": "^6.25.1"
+        "prettier": "^3.3.3",
+        "typescript": "^4.9.5"
     },
     "scripts": {
         "start": "react-scripts start",
