--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
         "react": "^18.3.1",
         "react-bootstrap": "^2.10.4",
         "react-dom": "^18.3.1",
+        "react-router-dom": "^6.25.1",
         "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4",
-        "react-router-dom": "^6.25.1"
+        "web-vitals": "^2.1.4"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.17.0",
