--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react-bootstrap": "^0.32.37",
         "@types/react-dom": "^18.3.0",
         "@types/react-router-dom": "^5.3.3",
+        "@types/reactstrap": "^8.7.1",
         "prettier": "^3.3.3",
         "typescript": "^4.9.5"
     },
