--- a/package.json
+++ b/package.json
@@ -1,53 +1,30 @@
 {
-    "name": "jhg-app",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "bootstrap": "^5.3.3",
-        "react": "^18.3.1",
-        "react-bootstrap": "^2.10.4",
-        "react-dom": "^18.3.1",
-        "react-router-dom": "^6.25.1",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
-    },
-    "devDependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/bootstrap": "^5.2.10",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.104",
-        "@types/react": "^18.3.3",
-        "@types/react-bootstrap": "^0.32.37",
-        "@types/react-dom": "^18.3.0",
-        "@types/react-router-dom": "^5.3.3",
-        "@types/reactstrap": "^8.7.1",
-        "prettier": "^3.3.3",
-        "typescript": "^4.9.5"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    }
+  "name": "jhg-app",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "bootstrap": "^5.3.3",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
+    "@types/react": "^18.3.10",
+    "@types/react-bootstrap": "^0.32.37",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.8"
+  }
 }
