--- a/package.json
+++ b/package.json
@@ -7,24 +7,29 @@
         "dev": "vite",
         "build": "tsc -b && vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "pretty": "prettier --write ."
     },
     "dependencies": {
         "bootstrap": "^5.3.3",
-        "react": "^18.3.1",
-        "react-bootstrap": "^2.10.5",
-        "react-dom": "^18.3.1",
-        "react-router-dom": "^6.27.0"
+        "react": "^19.0.0",
+        "react-bootstrap": "^2.10.9",
+        "react-dom": "^19.0.0",
+        "react-router": "^7.2.0"
     },
     "devDependencies": {
-        "@types/bootstrap": "^5.2.10",
-        "@types/react": "^18.3.10",
-        "@types/react-bootstrap": "^0.32.37",
-        "@types/react-dom": "^18.3.0",
-        "@types/react-router-dom": "^5.3.3",
-        "@vitejs/plugin-react-swc": "^3.5.0",
-        "globals": "^15.9.0",
-        "typescript": "^5.5.3",
-        "vite": "^5.4.8"
+        "@eslint/js": "^9.21.0",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@types/react-router": "^5.1.20",
+        "@vitejs/plugin-react-swc": "^3.8.0",
+        "eslint": "^9.21.0",
+        "eslint-plugin-react-hooks": "^5.1.0",
+        "eslint-plugin-react-refresh": "^0.4.19",
+        "globals": "^15.15.0",
+        "prettier": "^3.5.2",
+        "typescript": "~5.7.2",
+        "typescript-eslint": "^8.24.1",
+        "vite": "^6.2.0"
     }
 }
