--- a/package.json
+++ b/package.json
@@ -1,35 +1,20 @@
 {
-    "name": "jhg-app",
-    "private": true,
-    "version": "0.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview",
-        "pretty": "prettier --write ."
-    },
-    "dependencies": {
-        "bootstrap": "^5.3.8",
-        "react": "^19.2.3",
-        "react-bootstrap": "^2.10.10",
-        "react-dom": "^19.2.3",
-        "react-router": "^7.10.1"
-    },
-    "devDependencies": {
-        "@eslint/js": "^9.39.1",
-        "@types/react": "^19.2.7",
-        "@types/react-dom": "^19.2.3",
-        "@types/react-router": "^5.1.20",
-        "@vitejs/plugin-react-swc": "^3.11.0",
-        "eslint": "^9.39.1",
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "eslint-plugin-react-refresh": "^0.4.24",
-        "globals": "^15.15.0",
-        "prettier": "^3.7.4",
-        "typescript": "~5.7.3",
-        "typescript-eslint": "^8.49.0",
-        "vite": "^6.4.1"
-    }
+  "name": "bun-react-template",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "bun --hot src/index.ts",
+    "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"'",
+    "start": "NODE_ENV=production bun src/index.ts"
+  },
+  "dependencies": {
+    "react": "^19",
+    "react-dom": "^19"
+  },
+  "devDependencies": {
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/bun": "latest"
+  }
 }
