--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "bun-react-template",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "bun --hot src/index.ts",
-    "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"'",
-    "start": "NODE_ENV=production bun src/index.ts"
-  },
-  "dependencies": {
-    "react": "^19",
-    "react-dom": "^19"
-  },
-  "devDependencies": {
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/bun": "latest"
-  }
+    "name": "bun-react-template",
+    "version": "0.1.0",
+    "private": true,
+    "type": "module",
+    "scripts": {
+        "dev": "bun --hot src/index.ts",
+        "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"'",
+        "start": "NODE_ENV=production bun src/index.ts",
+        "pretty": "prettier --write ."
+    },
+    "dependencies": {
+        "bootstrap": "^5.3.8",
+        "react": "^19",
+        "react-dom": "^19",
+        "react-router": "^7.11.0"
+    },
+    "devDependencies": {
+        "@types/bun": "latest",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "prettier": "^3.7.4"
+    }
 }
