--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "type": "module",
     "scripts": {
         "dev": "bun --hot src/index.ts",
-        "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"'",
+        "build": "bun build.ts",
         "start": "NODE_ENV=production bun src/index.ts",
         "pretty": "prettier --write ."
     },
     "dependencies": {
         "bootstrap": "^5.3.8",
         "react": "^19",
+        "react-bootstrap": "^2.10.10",
         "react-dom": "^19",
         "react-router": "^7.11.0"
     },
