--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "bun-react-template",
-    "version": "0.1.0",
+    "name": "jhg-app",
+    "version": "1.0.0",
     "private": true,
     "type": "module",
     "scripts": {
         "dev": "bun --hot src/index.ts",
-        "build": "bun build.ts",
+        "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"'",
         "start": "NODE_ENV=production bun src/index.ts",
         "pretty": "prettier --write ."
     },
