--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
         "dev": "bun --hot src/index.ts",
         "build": "bun build ./src/index.html --outdir=dist --sourcemap --target=browser --minify --define:process.env.NODE_ENV='\"production\"'",
         "start": "NODE_ENV=production bun src/index.ts",
-        "pretty": "prettier --write ."
+        "pretty": "prettier --write .",
+        "lint": "eslint ."
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/material": "^7.3.8",
         "bootstrap": "^5.3.8",
         "react": "^19.2.4",
         "react-bootstrap": "^2.10.10",
@@ -17,9 +21,13 @@
         "react-router": "^7.13.0"
     },
     "devDependencies": {
+        "@eslint/js": "^10.0.1",
         "@types/bun": "latest",
         "@types/react": "^19.2.14",
         "@types/react-dom": "^19.2.3",
-        "prettier": "^3.8.1"
+        "eslint": "^10.0.1",
+        "prettier": "^3.8.1",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.56.0"
     }
 }
